fix list spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -5,3 +5,7 @@ a {
 blockquote {
   margin: 0;
 }
+
+.lh-list {
+  line-height: 2;
+}
